src/OpenCvSharp.Native/include/open_cv_sharp/objdetect/aruco.h

typedef struct jyppx_ocv_aruco_dictionary jyppx_ocv_aruco_dictionary;
typedef struct jyppx_ocv_aruco_detector jyppx_ocv_aruco_detector;
typedef struct jyppx_ocv_point2f
{
    float x;
    float y;
} jyppx_ocv_point2f;
typedef struct jyppx_ocv_aruco_detector_params
{
    int adaptive_thresh_win_size_min;
    int adaptive_thresh_win_size_max;
    int adaptive_thresh_win_size_step;
    double adaptive_thresh_constant;
    double min_marker_perimeter_rate;
    double max_marker_perimeter_rate;
    double polygonal_approx_accuracy_rate;
    double min_corner_distance_rate;
    int min_distance_to_border;
    double min_marker_distance_rate;
    float min_group_distance;
    int corner_refinement_method;
    int corner_refinement_win_size;
    float relative_corner_refinement_win_size;
    int corner_refinement_max_iterations;
    double corner_refinement_min_accuracy;
    int marker_border_bits;
    int perspective_remove_pixel_per_cell;
    double perspective_remove_ignored_margin_per_cell;
    double max_erroneous_bits_in_border_rate;
    double min_otsu_std_dev;
    double error_correction_rate;
    float april_tag_quad_decimate;
    float april_tag_quad_sigma;
    int april_tag_min_cluster_pixels;
    int april_tag_max_nmaxima;
    float april_tag_critical_rad;
    float april_tag_max_line_fit_mse;
    int april_tag_min_white_black_diff;
    int april_tag_deglitch;
    int detect_inverted_marker;
    int use_aruco3_detection;
    int min_side_length_canonical_img;
    float min_marker_length_ratio_original_img;
    float valid_bit_id_threshold;
} jyppx_ocv_aruco_detector_params;
typedef struct jyppx_ocv_aruco_refine_params
{
    float min_rep_distance;
    float error_correction_rate;
    int check_all_orders;
} jyppx_ocv_aruco_refine_params;
typedef struct jyppx_ocv_aruco_charuco_params
{
    int min_markers;
    int try_refine_markers;
    int check_markers;
} jyppx_ocv_aruco_charuco_params;
typedef struct jyppx_ocv_mcc_detector_params
{
    int adaptive_thresh_win_size_min;
    int adaptive_thresh_win_size_max;
    int adaptive_thresh_win_size_step;
    double adaptive_thresh_constant;
    double min_contours_area_rate;
    double min_contours_area;
    double confidence_threshold;
    double min_contour_solidity;
    double find_candidates_approx_poly_dp_eps_multiplier;
    int border_width;
    float b0_factor;
    float max_error;
    int min_contour_points_allowed;
    int min_contour_length_allowed;
    int min_inter_contour_distance;
    int min_inter_checker_distance;
    int min_image_size;
    int min_group_size;
} jyppx_ocv_mcc_detector_params;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_create_default(
    jyppx_ocv_aruco_dictionary** dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_create_predefined(
    int dictionary_id,
    jyppx_ocv_aruco_dictionary** dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_create_from_bytes_list(
    const jyppx_ocv_mat* bytes_list,
    int marker_size,
    int max_correction_bits,
    jyppx_ocv_aruco_dictionary** dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_aruco_dictionary_release_handle(
    jyppx_ocv_aruco_dictionary* dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_bytes_list(
    const jyppx_ocv_aruco_dictionary* dictionary,
    jyppx_ocv_mat** bytes_list);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_set_bytes_list(
    jyppx_ocv_aruco_dictionary* dictionary,
    const jyppx_ocv_mat* bytes_list);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_marker_size(
    const jyppx_ocv_aruco_dictionary* dictionary,
    int* marker_size);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_set_marker_size(
    jyppx_ocv_aruco_dictionary* dictionary,
    int marker_size);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_max_correction_bits(
    const jyppx_ocv_aruco_dictionary* dictionary,
    int* max_correction_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_set_max_correction_bits(
    jyppx_ocv_aruco_dictionary* dictionary,
    int max_correction_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_identify(
    const jyppx_ocv_aruco_dictionary* dictionary,
    const jyppx_ocv_mat* bits,
    double max_correction_rate,
    int* identified,
    int* index,
    int* rotation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_identify_with_threshold(
    const jyppx_ocv_aruco_dictionary* dictionary,
    const jyppx_ocv_mat* cell_pixel_ratio,
    double max_correction_rate,
    float valid_bit_id_threshold,
    int* identified,
    int* index,
    int* rotation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_distance_to_id(
    const jyppx_ocv_aruco_dictionary* dictionary,
    const jyppx_ocv_mat* bits,
    int id,
    int all_rotations,
    int* distance);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_generate_image_marker(
    const jyppx_ocv_aruco_dictionary* dictionary,
    int id,
    int side_pixels,
    jyppx_ocv_mat* image,
    int border_bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_marker_bits(
    const jyppx_ocv_aruco_dictionary* dictionary,
    int marker_id,
    int rotation_id,
    jyppx_ocv_mat** bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_byte_list_from_bits(
    const jyppx_ocv_mat* bits,
    jyppx_ocv_mat** byte_list);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_dictionary_get_bits_from_byte_list(
    const jyppx_ocv_mat* byte_list,
    int marker_size,
    int rotation_id,
    jyppx_ocv_mat** bits);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_default_params(
    jyppx_ocv_aruco_detector_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_refine_default_params(
    jyppx_ocv_aruco_refine_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_detector_default_params(
    jyppx_ocv_mcc_detector_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_charuco_default_params(
    jyppx_ocv_aruco_charuco_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_create(
    const jyppx_ocv_aruco_dictionary* dictionary,
    const jyppx_ocv_aruco_detector_params* detector_params,
    const jyppx_ocv_aruco_refine_params* refine_params,
    jyppx_ocv_aruco_detector** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_aruco_detector_release_handle(
    jyppx_ocv_aruco_detector* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_get_dictionary(
    const jyppx_ocv_aruco_detector* detector,
    jyppx_ocv_aruco_dictionary** dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_set_dictionary(
    jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_aruco_dictionary* dictionary);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_get_detector_parameters(
    const jyppx_ocv_aruco_detector* detector,
    jyppx_ocv_aruco_detector_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_set_detector_parameters(
    jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_aruco_detector_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_get_refine_parameters(
    const jyppx_ocv_aruco_detector* detector,
    jyppx_ocv_aruco_refine_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_set_refine_parameters(
    jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_aruco_refine_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_count(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_fill(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* corner_offsets,
    int corner_offset_capacity,
    jyppx_ocv_point2f* corners,
    int corner_capacity,
    int* ids,
    int id_capacity,
    int* rejected_offsets,
    int rejected_offset_capacity,
    jyppx_ocv_point2f* rejected_points,
    int rejected_point_capacity,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_aruco_detector_detect_markers_with_confidence_count(
    const jyppx_ocv_aruco_detector* detector,
    const jyppx_ocv_mat* image,
    int* marker_count,
    int* corner_point_count,
    int* rejected_count,
    int* rejected_point_count);