src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.DllImport.cs

#if !NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [StructLayout(LayoutKind.Sequential)]
        internal struct ArucoDetectorParamsNative
        {
            internal int AdaptiveThreshWinSizeMin;
            internal int AdaptiveThreshWinSizeMax;
            internal int AdaptiveThreshWinSizeStep;
            internal double AdaptiveThreshConstant;
            internal double MinMarkerPerimeterRate;
            internal double MaxMarkerPerimeterRate;
            internal double PolygonalApproxAccuracyRate;
            internal double MinCornerDistanceRate;
            internal int MinDistanceToBorder;
            internal double MinMarkerDistanceRate;
            internal float MinGroupDistance;
            internal int CornerRefinementMethod;
            internal int CornerRefinementWinSize;
            internal float RelativeCornerRefinementWinSize;
            internal int CornerRefinementMaxIterations;
            internal double CornerRefinementMinAccuracy;
            internal int MarkerBorderBits;
            internal int PerspectiveRemovePixelPerCell;
            internal double PerspectiveRemoveIgnoredMarginPerCell;
            internal double MaxErroneousBitsInBorderRate;
            internal double MinOtsuStdDev;
            internal double ErrorCorrectionRate;
            internal float AprilTagQuadDecimate;
            internal float AprilTagQuadSigma;
            internal int AprilTagMinClusterPixels;
            internal int AprilTagMaxNmaxima;
            internal float AprilTagCriticalRad;
            internal float AprilTagMaxLineFitMse;
            internal int AprilTagMinWhiteBlackDiff;
            internal int AprilTagDeglitch;
            internal int DetectInvertedMarker;
            internal int UseAruco3Detection;
            internal int MinSideLengthCanonicalImg;
            internal float MinMarkerLengthRatioOriginalImg;
            internal float ValidBitIdThreshold;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct ArucoRefineParamsNative
        {
            internal float MinRepDistance;
            internal float ErrorCorrectionRate;
            internal int CheckAllOrders;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct ArucoCharucoParamsNative
        {
            internal int MinMarkers;
            internal int TryRefineMarkers;
            internal int CheckMarkers;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct MccDetectorParamsNative
        {
            internal int AdaptiveThreshWinSizeMin;
            internal int AdaptiveThreshWinSizeMax;
            internal int AdaptiveThreshWinSizeStep;
            internal double AdaptiveThreshConstant;
            internal double MinContoursAreaRate;
            internal double MinContoursArea;
            internal double ConfidenceThreshold;
            internal double MinContourSolidity;
            internal double FindCandidatesApproxPolyDPEpsMultiplier;
            internal int BorderWidth;
            internal float B0Factor;
            internal float MaxError;
            internal int MinContourPointsAllowed;
            internal int MinContourLengthAllowed;
            internal int MinInterContourDistance;
            internal int MinInterCheckerDistance;
            internal int MinImageSize;
            internal int MinGroupSize;
        }

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_create_default")]
        internal static extern int ArucoDictionaryCreateDefault(out IntPtr dictionary);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_create_predefined")]
        internal static extern int ArucoDictionaryCreatePredefined(int dictionaryId, out IntPtr dictionary);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_create_from_bytes_list")]
        internal static extern int ArucoDictionaryCreateFromBytesList(IntPtr bytesList, int markerSize, int maxCorrectionBits, out IntPtr dictionary);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_release_handle")]
        internal static extern void ArucoDictionaryReleaseHandle(IntPtr dictionary);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_bytes_list")]
        internal static extern int ArucoDictionaryGetBytesList(IntPtr dictionary, out IntPtr bytesList);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_set_bytes_list")]
        internal static extern int ArucoDictionarySetBytesList(IntPtr dictionary, IntPtr bytesList);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_marker_size")]
        internal static extern int ArucoDictionaryGetMarkerSize(IntPtr dictionary, out int markerSize);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_set_marker_size")]
        internal static extern int ArucoDictionarySetMarkerSize(IntPtr dictionary, int markerSize);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_max_correction_bits")]
        internal static extern int ArucoDictionaryGetMaxCorrectionBits(IntPtr dictionary, out int maxCorrectionBits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_set_max_correction_bits")]
        internal static extern int ArucoDictionarySetMaxCorrectionBits(IntPtr dictionary, int maxCorrectionBits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_identify")]
        internal static extern int ArucoDictionaryIdentify(IntPtr dictionary, IntPtr bits, double maxCorrectionRate, out int identified, out int index, out int rotation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_identify_with_threshold")]
        internal static extern int ArucoDictionaryIdentifyWithThreshold(IntPtr dictionary, IntPtr cellPixelRatio, double maxCorrectionRate, float validBitIdThreshold, out int identified, out int index, out int rotation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_distance_to_id")]
        internal static extern int ArucoDictionaryGetDistanceToId(IntPtr dictionary, IntPtr bits, int id, int allRotations, out int distance);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_generate_image_marker")]
        internal static extern int ArucoDictionaryGenerateImageMarker(IntPtr dictionary, int id, int sidePixels, IntPtr image, int borderBits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_marker_bits")]
        internal static extern int ArucoDictionaryGetMarkerBits(IntPtr dictionary, int markerId, int rotationId, out IntPtr bits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_byte_list_from_bits")]
        internal static extern int ArucoDictionaryGetByteListFromBits(IntPtr bits, out IntPtr byteList);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_bits_from_byte_list")]
        internal static extern int ArucoDictionaryGetBitsFromByteList(IntPtr byteList, int markerSize, int rotationId, out IntPtr bits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_default_params")]
        internal static extern int ArucoDetectorDefaultParams(out ArucoDetectorParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_refine_default_params")]
        internal static extern int ArucoRefineDefaultParams(out ArucoRefineParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_detector_default_params")]
        internal static extern int MccDetectorDefaultParams(out MccDetectorParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_default_params")]
        internal static extern int ArucoCharucoDefaultParams(out ArucoCharucoParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_create")]
        internal static extern int ArucoDetectorCreate(IntPtr dictionary, ref ArucoDetectorParamsNative detectorParameters, ref ArucoRefineParamsNative refineParameters, out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_release_handle")]
        internal static extern void ArucoDetectorReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_dictionary")]
        internal static extern int ArucoDetectorGetDictionary(IntPtr detector, out IntPtr dictionary);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_dictionary")]
        internal static extern int ArucoDetectorSetDictionary(IntPtr detector, IntPtr dictionary);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_detector_parameters")]
        internal static extern int ArucoDetectorGetDetectorParameters(IntPtr detector, out ArucoDetectorParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_detector_parameters")]
        internal static extern int ArucoDetectorSetDetectorParameters(IntPtr detector, ref ArucoDetectorParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_refine_parameters")]
        internal static extern int ArucoDetectorGetRefineParameters(IntPtr detector, out ArucoRefineParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_refine_parameters")]
        internal static extern int ArucoDetectorSetRefineParameters(IntPtr detector, ref ArucoRefineParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_count")]
        internal static extern int ArucoDetectorDetectMarkersCount(IntPtr detector, IntPtr image, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_fill")]
        internal static extern int ArucoDetectorDetectMarkersFill(IntPtr detector, IntPtr image, int* cornerOffsets, int cornerOffsetCapacity, Point2fNative* corners, int cornerCapacity, int* ids, int idCapacity, int* rejectedOffsets, int rejectedOffsetCapacity, Point2fNative* rejectedPoints, int rejectedPointCapacity, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_with_confidence_count")]
        internal static extern int ArucoDetectorDetectMarkersWithConfidenceCount(IntPtr detector, IntPtr image, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);
